--- a/Front end/src/App.css
+++ b/Front end/src/App.css
@@ -1,14 +1,13 @@
 .App {
   text-align: center;
-  background-color:#363945;
+  background-color: 	#E8E8E8;
 }
 
 
 .background{
 
-  
+  background-color: 	#E8E8E8;
   overflow: auto;
-  background-color:#363945;
   position:fixed;
   width:100%;
   height:100%;
