--- a/Front end/src/components/pages.css
+++ b/Front end/src/components/pages.css
@@ -30,7 +30,7 @@ navbar */
     border-radius: 1px;
   } */
 
-  ul {
+  .main-nav-ul {
     list-style-type: none;
     margin: 0;
     padding: 30px;
@@ -49,23 +49,26 @@ navbar */
     color:#646e83
   }
 
-  .search-container{
+  .search-form{
     width:250px;
     padding-top:0px;
     height:50px;
     margin-right:5px;
     display:inline-block;
+    color:black;
+
   }
 
   #search-bar{
     height:30px;
     width:250px;
-
     display:inline-block;
+    color: black;
+
   }
 
   #search-submit{
-
+    color:black;
     display:inline-block;
   }
 
@@ -75,7 +78,7 @@ navbar */
 /* game  */
 
 
-  input[type=text], select {
+.login-input {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -239,9 +242,11 @@ Footer */
   width:100%;
 
 }
-.arrow-container button {
 
 
+.mb-0 font-weight-bold{
+  text-decoration: none;
+  padding: 0.5rem 1rem;
 }
 
 
@@ -385,7 +390,30 @@ Footer */
 
 }
 
+/* profile */
 
 
+.profile-image{
+  border-radius: 25px;
+  width: 100%;
+  height:300px;
+  margin: 0 auto;
+  outline: 0;
+  box-shadow: 0 0 0 3px #363945;
 
+}
+.profile-contents{
+
+}
+
+.user-banner{
+  
+  height:20%;
+  left: 0;
+  display: inline-block;
+}
+
+.user-banner img{
+  width:fit-content;
+}
 
